NEWS - OpenPrinting CUPS Filters v1.17.9 - 2017-10-05
-----------------------------------------------------

CHANGES IN V1.18.0

	- pdftoijs, pdftoopvp: Build pdftoijs and pdftoopvp only on
	  demand (via "--enable-ijs" and "--enable-opvp" on the
	  ./configure command line). There are actually no known
	  printer drivers using these filters. If no one complains
	  about the missing filters they will get completely removed.
	- Build system: Set default path for pdftops to
	  /usr/bin/pdftops also for cross-compiling (Bug #1417).
	- cups-browsed: Set "printer-location" as an attribute and not
	  as an option when creating/updating a CUPS queue (Bug
	  #1413).
	- braille: Fix handling non-printable characters in BRF
	  files. Thanks to Samuel Thibault for this patch.
	- braille: Fix printing backslashes in BRF files. Thanks to
          Samuel Thibault for this patch.
	- braille: use application/vnd.cups-brf instead of
	  text/vnd.cups-brf. Thanks to Samuel Thibault for this patch.
	- braille: Make sure liblouis emits pure BRF output. Thanks to
	  Samuel Thibault for this patch.
	- braille: Spaces at the head of lines were not getting
	  embossed, because bash would eat them in the read
	  command. IFS allows to avoid the issue. Thanks to Samuel
	  Thibault for this patch.
	- gstoraster: Emit proper error message if Ghostscript is
	  missing.  Thanks to Peter De Wachter (pdewacht at gmail dot
	  com) for the patch (Bug #1415).
	- braille: Old bash does not like quotes, like in '$(("123" +
	  0))'. Removed unneeded quotes. Thanks to Samuel Thibault for
	  this patch.
	- braille: Index V5 embossers are compatible with the V4
	  protocol so we do not need driver changes, we just need to
	  advertise the support. Thanks to Samuel Thibault for this
	  patch.

CHANGES IN V1.17.9

	- cups-browsed: Applying option defaults from the
	  DefaultOptions directive in cups-browsed.conf got
	  lost. Re-introduced it (Bug #1414).