@@ -3,6 +3,10 @@ NEWS - OpenPrinting CUPS Filters v1.17.9 - 2017-10-05
 
 CHANGES IN V1.18.0
 
+	- Build system: Make sure that "make dist" always includes all
+	  files of the repository, plus the files generated by
+	  ./autogen.sh, independent of the system configuration and
+	  the used ./configure options.
 	- pdftoijs, pdftoopvp: Build pdftoijs and pdftoopvp only on
 	  demand (via "--enable-ijs" and "--enable-opvp" on the
 	  ./configure command line). There are actually no known
